# drio-python

./: .coverage  .env  .gitignore  LICENSE  Makefile  README.rst  build documentation.bat  build.bat  build_doc.bat  changelog.md  deploy.bat  pyproject.toml  requirements.txt  run_integrationtests.bat  run_tests.bat  sandbox.ipynb  sandbox.py  setup.cfg  setup.py  tox-deploy.ini  tox.ini  ts_python_client.wpr  version.json
.deploy/: datareservoirio.pythonclient.nuspec  deploy.msbuild  packages.config
.deploy/scripts/: Deploy.ps1  deployenv.yml
.github/: pull_request_template.md
.github/workflows/: cd.yml  ci.yml  deploy.yml  deploy_public.yml  manual.yml
.nuget/: NuGet.targets
.tools/: deploy.msbuild
datareservoirio/: __init__.py  _constants.py  _logging.py  _utils.py  appdirs.py  authenticate.py  client.py  environments.py  globalsettings.py  log.py  storage_engine.py
datareservoirio/rest_api/: __init__.py  base.py  files.py  metadata.py  timeseries.py
datareservoirio/storage/: __init__.py  cache_engine.py  downloadstrategy.py  simplefilecache.py  storage.py  storage_engine.py  uploadstrategy.py
docs/: Makefile  advanced_config.rst  api.rst  basic_usage.rst  caching.rst  conf.py  cookbook.rst  data_struct.rst  developer.rst  getting_started.rst  gettingstarted.rst  index.rst  make.bat  metadata.rst  modules.rst  release_notes.rst  support.rst
docs/_static/: custom.css
docs/_templates/: navigation.html
docs/api_ref/: authentication.rst  client.rst  index.rst
docs/user_guide/: access_data.rst  advanced_config.rst  browse_search.rst  cookbook.rst  dos_donts.rst  index.rst  manage_metadata.rst  manage_series.rst  update_edit_data.rst
integration_tests/: README.md  conftest.py  test_aggregate_samples.py  test_empty.py  test_numeric.py  test_numeric_cached.py  test_numeric_caching.py  test_numeric_datetime.py  test_numeric_datetime_cached.py  test_numeric_overlapping.py  test_numeric_sparse.py  test_overlapping.py  test_string.py  test_string_datetime.py
integrationtests/: add_timeseries.py  authentication.py  create_timeseries.py  readme.md  uploadtimeseries.py  utils.py
samples/: Store and retrieve a series.ipynb  Store and retrieve tables.ipynb
tests/: __init__.py  conftest.py  response_cases.py  test__logging.py  test__utils.py  test_adalparameters.py  test_adalwrapper.py  test_apifiles.py  test_apitimeseries.py  test_apiwebbase.py  test_authenticate.py  test_authenticator.py  test_authenticator_2.py  test_client.py  test_environments.py  test_fileupload.py  test_globalsettings.py  test_logging.py  test_something.py  test_storage.py  test_storage_engine.py  test_timeseriesclient.py  test_usercredentials.py
tests/test_rest_api/: test_base.py  test_files.py  test_metadata.py  test_timeseries.py
tests/test_storage/: old_test_storage_engine.py  test_cache_engine.py  test_cacheddownloadstrategy.py  test_simplefilecache.py  test_storage.py  test_storage_engine.py
tests/testdata/: data_float.csv  data_float.parquet  data_string.csv  data_string.parquet  data_string_malformatted.csv  example_drio_api_output.json  example_drio_blob_file.csv
tests_integration/: __init__.py  _auth.py  exclude_test_large_upload_download.py  test_authentication.py  test_client.py  test_client_metadata.py  test_files_api.py  test_timeseries_api.py  test_timeseries_client.py
tests_integration/test_storage/: __init__.py  test_alwaysdownloadstrategy.py  test_basedownloader_directdownload.py  test_basedownloader_filecachedownload.py  test_cacheddownloadstrategy.py  test_simplefilecache.py  test_storage.py
timeseriesclient/: __init__.py  adalparameters.py  adalwrapper.py  apifiles.py  apitimeseries.py  apiwebbase.py  authenticate.py  constants.py  environments.py  fileupload.py  log.py  storage.py  timeseriesclient.py  usercredentials.py
timeseriesclient.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
timeseriesclient/rest_api/: __init__.py  base.py  base_api.py  files.py  files_api.py  metadata.py  timeseries.py  timeseries_api.py
timeseriesclient/test/: test_adal_parameters.py  test_adalparameters.py  test_adalwrapper.py  test_apifiles.py  test_apitimeseries.py  test_environments.py  test_fileupload.py  test_logging.py  test_storage.py  test_timeseriesclient.py  test_usercredentials.py
(+60 files in other folders)
