[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "datareservoirio"
authors = [{ name = "4Subsea", email = "support@4subsea.com" }]
dynamic = ["version"]
description = "DataReservoir.io Python API"
readme = "README.rst"
license = { file = "LICENSE" }
requires-python = ">3.11"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "numpy",
  "oauthlib",
  "pandas",
  "pyarrow",
  "requests",
  "requests-oauthlib",
  "importlib_resources",
  "tenacity<8.5",
  "urllib3 > 2",
  "tqdm",
  "azure-monitor-opentelemetry",
]

[project.urls]
"Homepage" = "https://github.com/4Subsea/drio-python"
"Bug Tracker" = "https://github.com/4Subsea/drio-python/issues"
"Documentation" = "https://docs.4insight.io/dataanalytics/reservoir/python/latest/"

[tool.setuptools.packages.find]
where = ["."]
include = ["datareservoirio*"]
namespaces = false

[tool.setuptools.dynamic]
version = { attr = "datareservoirio.__version__" }

[tool.pytest.ini_options]
pythonpath = [".", "src"]
markers = ["response_irrelevant"]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist =
    py
    docs

[testenv]
commands =
    pytest --cov=datareservoirio --cov-report html:cov_html-{envname} ./tests
deps =
    pytest
    pytest-cov


[testenv:docs]
basepython = python3.12
commands = sphinx-build -W -b html -d {toxworkdir}/docs_doctree docs {toxworkdir}/docs_out
deps =
    sphinx==5.3.0
    pydata-sphinx-theme==0.11.0
    myst_parser<2.0
"""

