[metadata]
name = datareservoirio
version = 0.0.1
licence = MIT
author = 4Subsea
author_email = support@4subsea.com
description = DataReservoir.io Python API
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://www.datareservoir.io
project_urls =
    Documentation = https://www.datareservoir.io/python/docs/latest/
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find_namespace:
python_requires = >=3.7
install_requires = 
    azure-storage-blob >= 12.4.0
    numpy
    oauthlib
    pandas
    pyarrow
    requests
    requests-oauthlib

[options.packages.find]
include = datareservoirio